# webrpa

./: .env.example  .gitignore  AGENTS.md  AI_PROJECT_GUIDE.md  AI_SKILL.md  ARCHITECTURE_AUDIT.md  CLAUDE.md  PLUGIN_CONTRACT.md  README.md  WEB_GUI_EMBED.md  dump_6_1_ui.py  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  run_webrpa.sh  sitecustomize.py  功能原子化修复结果.md  功能原子化问题分类说明.md
ai_services/: llm_client.py  vlm_client.py
api/: auth.py  server.py
common/: config_manager.py  logger.py  runtime_state.py  toolskit.py
config/: devices.json  doc_claims.yaml  system.yaml  x_mobile_login_gpt.json  x_ui.yaml
contracts/: action_handlers.pyi  rpa_types.pyi  sdk_types.pyi
core/: __init__.py  account_feedback.py  account_parser.py  account_service.py  account_store.py  ai_dialog_save_service.py  ai_dialog_service.py  ai_task_annotation_store.py  app_branch_service.py  app_config.py  app_config_candidate_service.py  app_config_writer.py  base_store.py  business_profile.py  cloud_probe_service.py  config_loader.py  control_flow_hints.py  credentials_loader.py  data_contracts.py  data_store.py  data_text_service.py  device_control.py  device_manager.py  device_profile_generator.py  device_profile_inventory.py  device_profile_selector.py  env_bootstrap.py  golden_run_distillation.py  lan_discovery.py  model_trace_store.py  paths.py  port_calc.py  runtime_profiles.py  shared_resource_store.py  system_settings_loader.py  task_api_service.py  task_control.py  task_events.py  task_execution.py  task_finalizer.py  (+9 more)
docs/: AI_ONBOARDING.md  ANDROID_RPA_SDK.md  (+34 more)
(+412 files in other folders)
